# guppylang

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .typos.toml  CHANGELOG.md  CITATIONS.bib  Cargo.toml  DEVELOPMENT.md  MANIFEST.in  README.md  codecov.yml  devenv.nix  devenv.yaml  guppy2phir.py  justfile  nesting.py  output.txt  package-lock.json  package.json  pyproject.toml  quickstart.md  release-please-config.json  requirements.txt  ruff.toml  test.py
execute_llvm/: Cargo.toml  pyproject.toml
execute_llvm/src/: bool.rs  lib.rs
guppylang/: CHANGELOG.md  README.md  __init__.py  ast_util.py  custom.py  declared.py  decorator.py  defs.py  diagnostic.py  diagnostic_miette.py  dummy_decorator.py  emulator.py  engine.py  error.py  experimental.py  gtypes.py  hresult.py  ipython_inspect.py  module.py  nodes.py  pyproject.toml  qsys_result.py  span.py
guppylang-internals/: CHANGELOG.md  README.md  pyproject.toml
guppylang-internals/src/guppylang_internals/: __init__.py  ast_util.py  decorator.py  defs.py  diagnostic.py  dummy_decorator.py  emulator.py  engine.py  error.py  experimental.py  nodes.py  span.py  wasm_util.py
guppylang-internals/src/guppylang_internals/cfg/: analysis.py  bb.py  builder.py  cfg.py
guppylang-internals/src/guppylang_internals/checker/: cfg_checker.py  core.py  expr_checker.py  func_checker.py  linearity_checker.py  modifier_checker.py  protocol_checker.py  stmt_checker.py  unitary_checker.py
guppylang-internals/src/guppylang_internals/checker/errors/: comptime_errors.py  generic.py  gpu.py  linearity.py  type_errors.py  wasm.py
guppylang-internals/src/guppylang_internals/compiler/: cfg_compiler.py  core.py  expr_compiler.py  func_compiler.py  modifier_compiler.py  stmt_compiler.py
guppylang-internals/src/guppylang_internals/definition/: common.py  const.py  custom.py  declaration.py  extern.py  function.py  gpu.py  lowerable.py  metadata.py  overloaded.py  parameter.py  protocol.py  pytket_circuits.py  struct.py  traced.py  ty.py  value.py  wasm.py
guppylang-internals/src/guppylang_internals/std/_internal/: checker.py  debug.py  util.py
guppylang-internals/src/guppylang_internals/std/_internal/compiler/: arithmetic.py  array.py  either.py  frozenarray.py  futures.py  gpu.py  list.py  mem.py  option.py  platform.py  prelude.py  qsystem.py  quantum.py  tket_bool.py  tket_exts.py  tmp_modifier.json  (+2 more)
guppylang-internals/src/guppylang_internals/tracing/: builtins_mock.py  frozenlist.py  function.py  object.py  state.py  unpacking.py  util.py
guppylang-internals/src/guppylang_internals/tys/: arg.py  builtin.py  common.py  const.py  errors.py  param.py  parsing.py  printing.py  protocol.py  qubit.py  subst.py  ty.py
guppylang/cfg/: analysis.py  bb.py  builder.py  cfg.py
guppylang/checker/: cfg_checker.py  core.py  expr_checker.py  func_checker.py  linearity_checker.py  protocol_checker.py  stmt_checker.py
guppylang/checker/errors/: comptime_errors.py  generic.py  gpu.py  linearity.py  py_errors.py  type_errors.py  wasm.py
guppylang/compiler/: cfg_compiler.py  core.py  expr_compiler.py  func_compiler.py  hugr_extension.py  stmt_compiler.py
guppylang/definition/: common.py  const.py  custom.py  declaration.py  extern.py  function.py  gpu.py  module.py  overloaded.py  parameter.py  protocol.py  pytket_circ.py  pytket_circuits.py  struct.py  traced.py  ty.py  value.py  wasm.py
guppylang/emulator/: __init__.py  builder.py  instance.py  result.py  state.py
guppylang/hugr/: __init__.py  hugr.py  ops.py  raw.py  visualise.py
guppylang/hugr/ops/: __init__.py  base.py  const.py
guppylang/hugr_builder/: _hugr.py  hugr.py  visualise.py
guppylang/miette-py/: Cargo.toml  pyproject.toml
guppylang/miette-py/scr/: lib.rs
guppylang/miette-py/src/: lib.rs
guppylang/prelude/: _internal.py  angles.py  builtins.py  quantum.py  quantum_functional.py
guppylang/prelude/_internal/: array_compiler.py  checker.py  compiler.py  list_compiler.py  quantum_ops.py  std_ops.py  util.py
guppylang/prelude/_internal/compiler/: angle.py  arithmetic.py  array.py  list.py  prelude.py  quantum.py
guppylang/prelude/_internal/json_defs/: __init__.py
guppylang/prelude/_internal/json_defs/tket2/: angle.json  futures.json  hseries.json  quantum.json  result.json  rotation.json
guppylang/pyruntime/: __init__.py  python_builtin.py  python_runtime.py
guppylang/src/guppylang/: __init__.py  decorator.py  defs.py  experimental.py  selene_plugin.py
guppylang/src/guppylang/emulator/: __init__.py  builder.py  exceptions.py  instance.py  result.py  state.py
guppylang/src/guppylang/std/: array.py  bool.py  err.py  iter.py  lang.py  num.py  platform.py
guppylang/src/guppylang/std/collections/: __init__.py  priority_queue.py  stack.py
guppylang/src/guppylang/std/qsystem/: __init__.py  random.py  wasm.py
guppylang/src/guppylang/std/quantum/: __init__.py
guppylang/std/: angles.py  array.py  bool.py  builtins.py  collections.py  debug.py  either.py  futures.py  iter.py  lang.py  list.py  mem.py  num.py  option.py  platform.py  quantum.py  quantum_functional.py  reflection.py  string.py  unsupported.py  wasm.py
guppylang/std/_internal/: checker.py  debug.py  util.py
guppylang/std/_internal/compiler/: arithmetic.py  array.py  either.py  frozenarray.py  futures.py  gpu.py  list.py  mem.py  option.py  prelude.py  qsystem.py  quantum.py  tket2_bool.py  tket2_exts.py  tket_bool.py  tket_exts.py  wasm.py
guppylang/std/array/: __init__.py  bool.py
guppylang/std/collections/: __init__.py  priority_queue.py  stack.py
guppylang/std/qsystem/: __init__.py  functional.py  gpu.py  random.py  utils.py  wasm.py
guppylang/std/quantum/: __init__.py  functional.py
guppylang/tracing/: builtins_mock.py  frozenlist.py  function.py  object.py  state.py  unpacking.py  util.py
guppylang/tys/: arg.py  builtin.py  common.py  const.py  constarg.py  definition.py  errors.py  param.py  parsing.py  printing.py  protocol.py  subst.py  ty.py  var.py
validator/: Cargo.toml  pyproject.toml
validator/src/: lib.rs  main.rs
(+1501 files in other folders)
