[workspace]
resolver = "2"
members = ["execute_llvm", "validator"]

# Building "execute_llvm" requires having LLVM14 installed
default-members = ["validator"]

[workspace.package]
rust-version = "1.75"
edition = "2021"
homepage = "https://github.com/CQCL/hugr"
repository = "https://github.com/CQCL/hugr"
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci_run)'] }
missing_docs = "warn"

[workspace.lints.clippy]
# Unstable check, may cause false positives.
# https://github.com/rust-lang/rust-clippy/issues/5112
debug_assert_with_mut_call = "warn"

[workspace.dependencies]
pyo3 = "0.24.1"
serde_json = "1.0.111"
cargo_toml = "0.20.4"
thiserror = "2.0.6"
hugr = "0.15.2"
hugr-cli = "0.15.2"

[patch.crates-io]

# Uncomment these to test the latest dependency version during development
#  hugr = { git = "https://github.com/CQCL/hugr", rev = "6bd76659" }
#  hugr-cli = { git = "https://github.com/CQCL/hugr", rev = "6bd76659" }
#  hugr-llvm = { git = "https://github.com/CQCL/hugr", rev = "6bd76659" }
