[workspace]
resolver = "2"
members = ["execute_llvm", "validator", "miette-py"]

# Building "execute_llvm" requires having LLVM14 installed
default-members = ["validator"]

[workspace.package]
rust-version = "1.75"
edition = "2021"
homepage = "https://github.com/CQCL/hugr"
repository = "https://github.com/CQCL/hugr"
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci_run)'] }
missing_docs = "warn"

[workspace.lints.clippy]
# Unstable check, may cause false positives.
# https://github.com/rust-lang/rust-clippy/issues/5112
debug_assert_with_mut_call = "warn"

[workspace.dependencies]
pyo3 = "0.24.1"
serde_json = "1.0.111"
cargo_toml = "0.20.4"
thiserror = "2.0.6"
hugr = "0.20.1"
hugr-cli = "0.20.1"
tket2 = { version = "0.12.0" }

[patch.crates-io]

# Uncomment these to test the latest dependency version during development
# hugr = { git = "https://github.com/CQCL/hugr", rev = "42ce05d" }
# hugr-cli = { git = "https://github.com/CQCL/hugr", rev = "42ce05d" }
# hugr-llvm = { git = "https://github.com/CQCL/hugr", rev = "42ce05d" }
# hugr-passes = { git = "https://github.com/CQCL/hugr", rev = "42ce05d" }

# Uncomment if latest tket2 dependency is needed for execute_llvm
# tket2 = { git = "https://github.com/CQCL/tket2.git", branch = "ts/replace-bool" }