[workspace]
resolver = "2"
members = ["miette-py"]

[workspace.package]
rust-version = "1.75"
edition = "2021"
homepage = "https://github.com/quantinuum/hugr"
repository = "https://github.com/quantinuum/hugr"
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci_run)'] }
missing_docs = "warn"

[workspace.lints.clippy]
# Unstable check, may cause false positives.
# https://github.com/rust-lang/rust-clippy/issues/5112
debug_assert_with_mut_call = "warn"

[workspace.dependencies]
pyo3 = "0.26"
