[project]
name = "guppylang"
version = "0.20.0"
requires-python = ">=3.10,<4"
description = "Pythonic quantum-classical programming language"
license = { file = "LICENCE" }
readme = "quickstart.md"
authors = [
    { name = "Mark Koch", email = "mark.koch@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "Mark Koch", email = "mark.koch@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "graphviz >=0.20.1,<0.21",
    "networkx >=3.2.1,<4",
    "pydantic >=2.7.0b1,<3",
    "typing-extensions >=4.9.0,<5",
    "tket-exts ~= 0.10.0",
    "hugr >= 0.13.0rc1,<0.14",
    "selene-sim>=0.2.0rc1"
]


[project.optional-dependencies]
pytket = ["pytket>=1.34"]

[project.urls]
homepage = "https://github.com/CQCL/guppylang"
repository = "https://github.com/CQCL/guppylang"

[dependency-groups]
docs = ["furo>=2024.8.6", "sphinx >=7.2.6,<9"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "pytket_integration" },
]
lint = ["pre-commit >=3.6.0,<4", "ruff >=0.6.2,<0.7", "mypy ==1.10.0"]
test = [
    "pytest >=8.3.2,<9",
    "pytest-cov >=5.0.0,<6",
    "pytest-notebook >=0.10.0,<0.11",
    "pytest-snapshot >=0.9.0,<1",
    "ipykernel >=6.29.5,<7",
    "tket ~= 0.12.1",
    "pytest-benchmark>=5.1.0",
    "miette-py",
    "selene-hugr-qis-compiler>=0.2.0rc1",
    "matplotlib>=3.9.2",
]

pytket_integration = [{ include-group = "test" }, "pytket >=1.34.0"]

[tool.uv.workspace]
members = ["miette-py"]

[tool.uv.sources]
miette-py = { workspace = true }

# Uncomment these to test the latest dependency version during development
# hugr = { git = "https://github.com/CQCL/hugr", subdirectory = "hugr-py", rev = "50a2bac" }
# tket = { git = "https://github.com/CQCL/tket2", subdirectory = "tket-py", rev = "aca944c" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = ["miette_py"]


[tool.coverage.report]
exclude_also = [
    # Don't complain about missing coverage on typing imports
    "if TYPE_CHECKING:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise InternalGuppyError",

    # Don't complain about abstract methods, they aren't run:
    "@abstractmethod",
]


[tool.pytest.ini_options]
addopts = "--benchmark-skip" # benchmarks run explicitly with `just bench`
