[dependency-groups]
docs = ["furo>=2024.8.6", "sphinx >=7.2.6,<9"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "pytket_integration" },
    { include-group = "examples" },
]
lint = ["pre-commit >=3.6.0,<4", "ruff >=0.6.2,<0.7", "mypy ==1.10.0"]
examples = ["matplotlib>=3.9.2", "networkx>=2.6,<4"]
test = [
    "pytest >=8.3.2,<9",
    "pytest-cov >=5.0.0,<6",
    "pytest-notebook >=0.10.0,<0.11",
    "pytest-snapshot >=0.9.0,<1",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.8.0",
    "ipykernel >=6.29.5,<7",
    "miette-py",
]
pytket_integration = [{ include-group = "test" }, "guppylang[pytket]"]

[tool.uv]

[tool.uv.workspace]
members = ["guppylang", "guppylang-internals", "miette-py"]

[tool.uv.sources]
guppylang = { workspace = true }
guppylang-internals = { workspace = true }
miette-py = { workspace = true }
# Uncomment these to test the latest dependency version during development
# hugr = { git = "https://github.com/cqcl/hugr", subdirectory = "hugr-py", rev = "35b5b7b" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
strict = true
allow_redefinition = true

[[tool.mypy.overrides]]
module = ["miette_py"]

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing coverage on typing imports
    "if TYPE_CHECKING:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise InternalGuppyError",

    # Don't complain about abstract methods, they aren't run:
    "@abstractmethod",
]


[tool.pytest.ini_options]
addopts = "--benchmark-skip" # benchmarks run explicitly with `just bench`
filterwarnings = [
    "ignore::DeprecationWarning", # TODO remove after removing guppy.compile()
    "ignore::SyntaxWarning", # Python 3.14 complains about guppy tuple callables
]
