[package]
name = "execute_llvm"
version = "0.2.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "execute_llvm"
crate-type = ["cdylib"]

[dependencies]
hugr = {workspace = true, features = ["llvm"]}
hugr-passes = "0.14.0"
inkwell.workspace = true
pyo3.workspace = true
serde_json.workspace = true
