[package]
name = "execute_llvm"
version = "0.2.3"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "execute_llvm"
crate-type = ["cdylib"]

[dependencies]
hugr = { workspace = true, features = ["llvm"] }
pyo3.workspace = true
serde_json.workspace = true
