[package]
name = "execute_llvm"
version = "0.2.3"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "execute_llvm"
crate-type = ["cdylib"]

[dependencies]
hugr = { workspace = true, features = ["llvm"] }
anyhow = "1.0"
inkwell = { version = "0.6.0", features = ["llvm14-0"] }
tket2.workspace = true
pyo3.workspace = true
serde_json.workspace = true
