[project]
name = "guppylang-internals"
version = "0.24.0"
requires-python = ">=3.10,<4"
description = "Compiler internals for `guppylang` package."
license = { file = "LICENCE" }
readme = "README.md"
authors = [
    { name = "Mark Koch", email = "mark.koch@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "Mark Koch", email = "mark.koch@quantinuum.com" },
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "typing-extensions >=4.9.0,<5",
    "tket-exts ~= 0.12.0",
    "hugr ~= 0.14.0",
]

[tool.uv.sources]
# tket-exts = { git = "https://github.com/CQCL/tket2", subdirectory = "tket-exts", rev = "eed16e8" }

[project.optional-dependencies]
pytket = ["pytket>=1.34"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
