[package]
name = "guppyval"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "guppyval"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
hugr = "0.10.0"
lazy_static = "1.4.0"
serde_json = "1.0.111"
tket2 = { git = "https://github.com/CQCL/tket2.git", rev = "8aff57a65d42aae631c89ee86f6f1fc7bb1b4da8" }
