[package]
name = "guppyval"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "guppyval"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
hugr = "0.11.0"
lazy_static = "1.5.0"
serde_json = "1.0.111"
tket2 = "0.1.1"
tket2-hseries = "0.1.1"
